This was wrong: as_string() returned the entire HTTP response okay,
but the headers were generated with "\n" newlines instead of network
ones ("\x0D\x0A").  The result is that pickier browsers such as MSIE
and Lynx were displaying the HTTP headers as part of the content.
Bleah!  Stole HTTP::Response's as_string() method, and fixed the code
up a bit.


0.11 2000.07.12
---------------

A-mused found samples/thrash.perl failing on Redhat 6.0.  The chain of
events goes something like this: (1) select says a non-blocking
connecting socket's ready for writing.  (2) getsockopt(SO_ERROR)
reports that the socket is fine.  (3) getpeername returns undef, and
$! becomes ENOTCONN.  (4) unpack_sockaddr_in predictably fails.
... The same test passes on other machines, including Solaris 7, OS/2,
and FreeBSD 4.0-STABLE.  I patched SocketFactory to report an error if
getpeername fails, and this cleared up the failure's symptom.


0.1011 2000.06.29
-----------------

Added t/17_filter_ref.t: 80 tests for Filter::Reference.

Removed an errant diagnostic from t/11_signals_poe.t; thanks a-mused.

The garbage collection tidy in 0.1008 had broken GC in certain
instances.  The problem didn't show up anywhere but the queue.perl
sample, as far as I can tell.  I think it's corrected now.

69% test coverage now.  Check the README for stats.


0.1010 2000.06.20 (!!!)
-----------------------

Wheel::FollowTail was working on its filehandles before setting them
non-blocking.  Rearranged a couple lines of code to turn off blocking
before working with filehandles.

Tweaked the signals tests to wait longer for child processes to
terminate.

(!!!) I have nothing good to say about POE::Kernel's experimental
fork() method, so I will refrain from saying anything more than "It
has been removed."  Please use plain fork(2).

(!!!) Added variable-length block support to Filter::Block.  In this
mode, each item will be received the same as it was put().  This